feature:.gradle설정 수정 추가