@@ -1,4 +1,22 @@
 dependencies {
-    // Redisson (for RedissonClient)
     implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
+    // 버전 업데이트 경고 로그 삭제를 위해 추가
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+}
+
+sourceSets {
+    main {
+        resources {
+            // fromYAML을 위해 src path 수정
+            srcDir 'resources'
+        }
+    }
 }
